# QGraph

./: .gitignore  CMakeLists.txt  README.md
include/QGraph/: libqgraph.hh  qevaluator.hh  qgraph.hh  qlink.hh  qnode.hh  qsocket.hh  qtypes.hh
src/: CMakeLists.txt  libqgraph.cc
test/: CMakeLists.txt  tests.cc
tools/: CMakeLists.txt  qgraph.cc
